--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 
 # dependencies
 /node_modules
+node_modules
+
+
 
 # IDEs and editors
 /.idea
@@ -32,6 +35,7 @@
 npm-debug.log
 testem.log
 /typings
+.ng_pkg_build
 
 # e2e
 /e2e/*.js
