--- a/package.json
+++ b/package.json
@@ -18,39 +18,40 @@
     "update": "./node_modules/.bin/nx update",
     "update:check": "./node_modules/.bin/nx update check",
     "update:skip": "./node_modules/.bin/nx update skip",
-    "postinstall": "./node_modules/.bin/nx postinstall"
+    "postinstall": "./node_modules/.bin/nx postinstall",
+    "build:libs": "rimraf dist && ./node_modules/.bin/ng-packagr -p libs/shared/package.json && ./node_modules/.bin/ng-packagr -p libs/presentational-components/package.json && ./node_modules/.bin/ng-packagr -p libs/blog/package.json && ./node_modules/.bin/ng-packagr -p libs/projects/package.json && ./node_modules/.bin/ng-packagr -p libs/team/package.json && ./node_modules/.bin/ng-packagr -p libs/users/package.json"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "5.2.6",
+    "@angular/cdk": "5.2.2",
     "@angular/common": "5.2.6",
     "@angular/compiler": "5.2.6",
     "@angular/core": "5.2.6",
+    "@angular/flex-layout": "5.0.0-beta.13",
     "@angular/forms": "5.2.6",
+    "@angular/http": "^5.2.0",
+    "@angular/material": "5.2.2",
     "@angular/platform-browser": "5.2.6",
     "@angular/platform-browser-dynamic": "5.2.6",
     "@angular/router": "5.2.6",
-    "@angular/cdk": "5.2.2",
-    "@angular/material": "5.2.2",
-    "@angular/http": "^5.2.0",
-    "@angular/flex-layout": "5.0.0-beta.13",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
-    "@nrwl/nx": "0.9.1",
+    "@auth0/angular-jwt": "^1.0.0-beta.9",
     "@ngrx/effects": "5.1.0",
     "@ngrx/router-store": "5.0.1",
     "@ngrx/store": "5.1.0",
     "@ngrx/store-devtools": "5.1.0",
-    "ngrx-store-freeze": "^0.2.1",
+    "@nrwl/nx": "0.9.1",
+    "core-js": "^2.4.1",
     "ng2-breadcrumbs": "^0.1.281",
-    "@auth0/angular-jwt": "^1.0.0-beta.9"
+    "ngrx-store-freeze": "^0.2.1",
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "1.7.1",
     "@angular/compiler-cli": "5.2.6",
-    "@nrwl/schematics": "0.9.1",
     "@angular/language-service": "5.2.6",
+    "@nrwl/schematics": "0.9.1",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -62,10 +63,11 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^2.2.0",
+    "prettier": "1.10.2",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "2.6.2",
-    "prettier": "1.10.2"
+    "typescript": "2.6.2"
   }
 }
